--- a/GitSetUp.html
+++ b/GitSetUp.html
@@ -1,25 +1,25 @@
 <p>
-    <b>Command to Set local Configuration to use git in local</b>
-    ======================================================
+    <b>Command to Set local Configuration to use git in local</b><br>
+    ======================================================<br><br>
 
 
-    git config --global user.name "********"
+    1. git config --global user.name "********"<br>
 
-    git config --global user.email "**********"
-
-
-    <b>Command to clone git repository to local repository(run the command on respective folder)</b>
-    ===========================================================
-
-    git clone (line/origin)
+    2. git config --global user.email "**********"<br><br>
 
 
-    <b>Command to add,commit and push file to gitup</b>
-    ==============================================
+    <b>Command to clone git repository to local repository(run the command on respective folder)</b><br>
+    ===========================================================<br><br>
 
-    add file in git repository(staging area)- git add filename
+    1. git clone (line/origin)<br><br>
 
-    To commit file - git commit -m "message"
 
-    push file to gitup - git push origin "main(folder name)"
+    <b>Command to add,commit and push file to gitup</b><br>
+    ==============================================<br><br>
+
+    1. add file in git repository(staging area)- git add filename<br>
+
+    2. To commit file - git commit -m "message"<br>
+
+    3. push file to gitup - git push origin "main(folder name)"<br>
 </p>
