modified git setup

--- a/GitSetUp.html
+++ b/GitSetUp.html
@@ -21,5 +21,12 @@
 
     2. To commit file - git commit -m "message"<br>
 
-    3. push file to gitup - git push origin "main(folder name)"<br>
+    3. push file to gitup - git push origin "main(folder name)"<br><br>
+
+    <b>Command to move new folder to gitup</b><br><br>
+     
+    1.inside folder run - git init<br>
+
+    2.To connect new folder to gitup repository - git remote add origin "link"<br>
+
 </p>
