--- a/GitSetUp.html
+++ b/GitSetUp.html
@@ -11,22 +11,30 @@
     <b>Command to clone git repository to local repository(run the command on respective folder)</b><br>
     ===========================================================<br><br>
 
-    1. git clone (line/origin)<br><br>
+    1. git clone (link/origin)<br><br>
 
 
-    <b>Command to add,commit and push file to gitup</b><br>
+    <b>Command to add,commit and push file to github</b><br>
     ==============================================<br><br>
 
     1. add file in git repository(staging area)- git add filename<br>
 
     2. To commit file - git commit -m "message"<br>
 
-    3. push file to gitup - git push origin "main(folder name)"<br><br>
+    3. push file to github - git push origin "main(folder name)"<br><br>
 
     <b>Command to move new folder to gitup</b><br><br>
      
     1.inside folder run - git init<br>
+    
+    2.To connect new folder to github repository - git remote add origin "link"<br>
 
-    2.To connect new folder to gitup repository - git remote add origin "link"<br>
+    How to Create new branch ,view branch,change branch
+
+    1. To list branch command - git branch -a
+
+    2. create new branch in gitup and use - (git pull) to pull change from github to local folder
+
+    3. change branch - git checkout [branch name].
 
 </p>
